--- a/static/base.scss
+++ b/static/base.scss
@@ -50,6 +50,11 @@ html {scroll-behavior:smooth}
 .section-nav{padding-left:0;border-left:0.2rem solid #ccc;margin-left:0.75rem;}
 .section-nav a{text-decoration:none;display:block;padding:.125rem 0;color:#ccc;transition:all 50ms ease-in-out}
 .section-nav a:hover,.section-nav a:focus{color:#666}
+.anchor {
+  display:block;
+  height:8.625rem;
+  margin-top:-8.625rem;
+}
 
 .mapscag::before {
   display: block; 
