Sped up a bit by switching session back to HypixelAPI. some other changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -180,7 +180,7 @@
                         <b class='lime'>[VIP]</b> bought <b>{{boughtPastTime}}</b> - <b>{{boughtPastRank}}</b> ago
                     {% endif %}
                 {% else %}
-                ...
+                Has never bought a rank
                 {% endif %}
             </p>
 
@@ -198,7 +198,7 @@
                 {% if firstLoginUnix != 1 %}
                     <b>First login</b>: {{ firstLogin }}
                 {% else %}
-                ...
+                Has never logged into Hypixel
                 {% endif %}
             </p>
 
