--- a/templates/404.html
+++ b/templates/404.html
@@ -10,14 +10,17 @@
 {% block content %}
 <body>
 
-	<div class="h2d">
-		{{error}} - {{text}}
+	<div class="flex flex-col items-center">
+		<div class="text-3xl">
+			<div class="text-8xl font-bold">{{error}}</div> {{text}}
+		</div>
+		<img class='h-auto' src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
+		<p>
+			{% if text == 'API timeout' %}
+			{{desc}} Check its status <a target='_blank' class='font-semibold' href="https://status.hypixel.net">here</a>.
+			{% endif %}
+		</p>
 	</div>
 
-	<img src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
-
-	<p>
-		{{desc}}
-	</p>
 </body>
 {% endblock %}
