--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,11 +1,48 @@
 {% extends 'index.html' %}
-Privacy Policy
 
 {% block head %}
 {% endblock %}
-
 {% block content %}
-1. This clause describes the Personally Identifiable Information ("PII" from thus on) that is collected when you, the user, uses tiramisu or any other literaiiy service.
-
-2. Please refer to the privacy policy that covers literaiiy.me at <a href="https://literaiiy.me/privacy">literaiiy.me/privacy</a>.
+<head>
+    <title>Privacy Policy | tiramisu</title>
+</head>
+<div class='py-10 px-20 leading-10'>
+    <div class="text-4xl font-semibold">Privacy Policy</div>
+    <br>
+    <hr>
+    <br>
+    <p>
+        This webpage describes the Personal Information (with "PI" as an alias) that is collected when the User uses tiramisu or any other literaiiy service. This policy applies sitewide.
+    </p>
+    <br>
+    <div class="text-2xl">How personal data is used</div>
+    <p>
+        There is a possibility that tiramisu may collect "usage data", data concerning the User's usage of the tiramisu website that may include IP address, geolocation, browser, operating system, page view length, and more.
+        This information is used solely to create an understanding of the site's viewership. 
+    </p>
+    <br>
+    <div class="text-2xl">Transfer of your personal data</div>
+    <p>
+        The User's PI may be shared with third parties with the sole purpose of interpreting site viewership statistics. The User's data will not be personally identifiable and will only appear in an aggregate dataset.
+    </p>
+    <br>
+    <div class="text-2xl">GDPR Compliance</div>
+    <p>
+        The <a href="https://gdpr.eu">GDPR</a>, or General Data Protection Regulation, is a law enacted by the European Union that serves as a privacy regulation covering users within the European Union.
+        No information that is personally identifiable is used in any form. tiramisu should be compliant with GDPR.
+    </p>
+    <br>
+    <div class="text-2xl">Revisions of this Privacy Policy</div>
+    <p>
+        This Privacy Policy is subject to change without prior notice. The date of change will be timestamped at the bottom of this Privacy Policy.
+    </p>
+    <br>
+    <div class="text-2xl">Contact</div>
+    <p>
+        This website is operated by literaiiy (Minecraft username may differ) at <a class='underline' target='_blank' href="https://literaiiy.me">literaiiy.me</a>. If any further questions arise, please feel free to contact me at <a class='underline' href="mailto:admin@literaiiy.me">admin[a]literaiiy.me</a>, where the [a] would be replaced with an @. 
+    </p>
+    <br>
+    <i>Last updated April 22, 2021</i>
+    
+</div>
 {% endblock %}
