--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,8 @@
 		<script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/plug-ins/1.10.21/sorting/datetime-moment.js"></script>
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/datetime/1.0.3/js/dataTables.dateTime.min.js"></script>
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/0.6.1/progressbar.js'></script>
+		<link rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/twemoji-awesome@1.0.6/dist/twemoji-awesome.min.css'></link>
+		<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/0.6.1/progressbar.js'></script> -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
@@ -30,8 +31,8 @@
 				</button>
 			</form>
 			<div class="flex flex-row-reverse">
-				<button class='my-5 mx-2 px-5 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'><i class="fas fa-flag-usa"></i></button>
-				<button class="my-5 mx-2 px-5 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300"><i class="far fa-sun"></i></button>
+				<button class='my-5 mx-2 px-3 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'><i class="twa twa-2x twa-1f1fa-1f1f8"></i></button>
+				<button class="my-5 mx-2 px-3 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300"><i class="twa twa-2x twa-2600"></i></button>
 			</div>
 		</div>
 	</head>
